--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,7 @@
-/*# sourceMappingURL=style.css.map */
+li {
+  border: 2px solid black;
+  width: 300px;
+  display: flexbox;
+  align-items: center;
+  align-content: center;
+}/*# sourceMappingURL=style.css.map */
