--- a/style.scss
+++ b/style.scss
@@ -1,1 +1,8 @@
-// costam
+li {
+
+    border: 2px solid black;
+    width: 300px;
+    display: flexbox;
+    align-items: center;
+    align-content: center;
+}
